--- a/chromeonly.html
+++ b/chromeonly.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Jitsi Meet: Unsupported Browser</title>
+<title>callstats.io using jitsi: Unsupported Browser</title>
 <link rel="stylesheet" type="text/css" media="screen" href="css/chromeonly.css" />
 </head>
 
